# nexora-node_ynh

./: README.md  SHARED_MODULES_MANIFEST.json  install.sh  manifest.toml  pyproject.toml
.github/workflows/: ci.yml  package-lint.yml
apps/node_agent/: agent.py  api.py
conf/: nginx.conf  systemd-node-agent.service
deploy/: adoption-report.sh  bootstrap-adopt.sh  bootstrap-augment.sh  bootstrap-node.sh
deploy/node/: bootstrap-subscriber.sh
deploy/node/templates/: nexora-node-agent.service
doc/: DESCRIPTION.md  PRE_INSTALL.md
docs/: ARCHITECTURE.md  DEPLOYMENT.md  OVERLAY.md  SECURITY.md  SUBSCRIBER_GUIDE.md  docs_inventory.yaml
scripts/: _common.sh  backup  build_vm_offline_kit.sh  ci_check_sdk_isolation.py  ci_check_wheel_clean.py  install  node_coherence_audit.py  remove  restore  upgrade
tests/: test_agent_actions.py  test_auth_runtime_resilience.py  test_blueprint_resolution.py  test_capabilities.py  test_ci_guardrails.py  test_docker_extended.py  test_docs_inventory_contract.py  test_failover_extended.py  test_heartbeat.py  test_node_action_backends.py  test_node_agent_contract.py  test_overlay.py  test_package_contract.py  test_persistence_backend.py  test_pra.py  test_security_audit.py  test_security_audit_public_contract.py  test_security_hardening.py  test_state_and_compatibility.py  test_sync_engine.py  test_tls.py  test_ws4_security.py
ynh-package/: README.md  manifest.toml  tests.toml
ynh-package/conf/: config.toml  nginx.conf  systemd-node-agent.service  systemd.service
ynh-package/doc/: ADMIN.md  DESCRIPTION.md  DESCRIPTION_fr.md  POST_INSTALL.md  PRE_INSTALL.md  SECURITY.md
ynh-package/scripts/: _common.sh  backup  change_url  install  remove  restore  upgrade
