[project]
name = "nexora-node-ynh"
version = "2.0.0"
description = "Nexora Layer B repository: node agent, YunoHost packaging, trust lifecycle, and local adapters"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
authors = [{ name = "informel-tic" }]
keywords = ["yunohost", "node-agent", "packaging", "trust", "identity", "runtime"]
dependencies = [
  "pydantic>=2.0",
  "uvicorn>=0.30.0",
  "fastapi>=0.115.0",
  "pyyaml>=6.0.0",
  'tomli>=2.0.0; python_version < "3.11"',
]

[project.scripts]
nexora-node-agent = "node_agent.agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nexora_core", "apps/node_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
python_files = ["test_*.py"]
testpaths = ["tests"]
